Fixed alignment by adding margins. cleaned up some css

--- a/styleOne.css
+++ b/styleOne.css
@@ -1,3 +1,8 @@
+@import 'helpers';
+@import 'vendor/bourbon/bourbon';
+@import 'vendor/neat/neat';
+@import 'reset';
+@import "vendor/neat/neat-helpers";
 body {
 	background-color: #004d4d;
 }
@@ -10,55 +15,55 @@ header {
 	background-color: #99ffeb;
 	padding-right: 25px;
 }
-@media (max-width: 433px) {
-	#headerButtons{
-		width: 400px;
-		margin: none
-		padding:none;
-	}
-	button.home{
-		padding:none;
-		float: left;
-		position: relative;
-		right:30px;
-	}
-}
-@media (max-width: 554px) {
-	header{
-		height: 150px;
-	}
-	#headerButtons{
-		position: relative;
-		top: 30px;
-		right:25px;
-		padding-left: 0px;
-		margin-left: 0px;
-		align-self: left;
+		@media (max-width: 450px) {
+			#headerButtons{
+				width: 1000px;
+				margin: none
+				padding:none;
+			}
+			button.home{
+				padding:none;
+				float: left;
+				position: relative;
+				right:30px;
+			}
+		}
+		@media (max-width: 554px) {
+			header{
+				height: 150px;
+			}
+			#headerButtons{
+				position: relative;
+				top: 30px;
+				right:25px;
+				padding-left: 0px;
+				margin-left: 0px;
+				align-self: left;
 
 
-	}
-	#gifBox{
-		width: : 50%;
-	}
+			}
+			#gifBox{
+				width: : 50%;
+			}
+		}
+		@media (max-width:670px){
+			#gifBox{
+				padding-top: 33%;
+			}
+			}
+		@media (min-width: 973px){
+			#gifBox {
+				padding-top: 100%;
+				}
+				}
+/*#laavka{
+	max-width: 300px;
 }
-@media (max-width:670px){
-	#gifBox{
-		padding-top: 33%;
-	}
-}
-@media (min-width: 973px){
-	#gifBox {
-		padding-top: 100%;
-	}
-}
-#laavka{
-	max-width: 700px;
-}
-@media if (min-width: 1200px){
-	#laavka{
-		width: 300px;
-	}
-}
+		@media (max-width: 1200px){
+				#laavka{
+					width: 700px;
+				}
+		}*/
 .topside{
 	padding-left: 10px;
 	font-family: Bookman, Garamond;
@@ -134,18 +139,6 @@ th {
  	border: none;
   	border-radius: 5px;
 }
-.sideBarBtn{  
-	padding: 10px 10px;
-  	font-size: 16px;
-  	text-align: right;
-  	cursor: pointer;
-  	outline: none;
-  	color: #001a1a;
-  	background-color: #99ffeb;
- 	 border: none;
-  	border-radius: 0px;
-  	width: 100px;
-  }
 .submit{
 	padding: 10px 9px;
   	font-size: 18px;
@@ -156,16 +149,6 @@ th {
   	background-color: #99ffeb;
  	 border: none;
   	border-radius: 4px;
-
-}
-.butt{
-	width: 300px;
-	height: 300px;
-	display: inline;
-	float: left;
-}
-.hide{
-	display: none;
 
 }
 .images{
@@ -211,65 +194,16 @@ th {
 .malLinkText{
 	max-width: 100px;
 }
-div.one {
-	position: fixed;
-	float: right;
-    width: 1px;
-    height: 800px;
-    background: #004d4d;
-  
-    transition: width 2s;
-}
-div.two {
-	z-index: 99 !important;
-	position: fixed;
-	align-self: left;
-    width: 10px;
-    height: 800px;
-    background:  none;
-
-    transition: width 2s;
-}
-div.three{
-	float: top;
-	position: fixed;
-	bottom: 0px;
-    width: 100%;
-    height: 100px;
-    background: #99ffeb;
-    transition: height 2s;
-}
-
-div.one:hover {
-    width: 478px;
-}
-div.two:hover {
-    width: 5%;
-}
-div.three:hover {
-	height: 60%;
-}
 .contactForm {
 	margin-left: 30%;
 	margin-right: 30%;
 	border-style: none;
 	background-color: #004d4d;
 }
-.butt:hover .butt2 {
-
-	display: inline-block;
-
-}
-.butt2{
-	display:none;
-}
 .home:hover{
 	background-color: #00b3b3;
 }
 .submit:hover{
-	background-color: #00b3b3;
-}
-.submit:hover:after{
 	background-color: #00b3b3;
 }
 .button:active {
@@ -281,7 +215,3 @@ td {
 	padding-left: 5px;
 	color: white;
 }
-h3.central {
-	float: top;
-	color:#00b3b3;
-	text-shadow: 2px 2px #003333;}
